Estructura del proyecto hecha y api de login lista

--- a/Ramto.API/appsettings.json
+++ b/Ramto.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConexionDB": "Data Source=TypingSoft.ddns.net\\SQLExpress;Initial Catalog=RamtoDB;Integrated Security=False;User ID=sa;Password=TypingSoft2024-A;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultipleActiveResultSets=True;MultiSubnetFailover=False"
+
+  }
 }
