--- a/Ramto.API/Ramto.API.csproj
+++ b/Ramto.API/Ramto.API.csproj
@@ -1,9 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+	<Import Project="..\Ramto.Modelos\Ramto.Modelos.projitems" Label="Shared" />
+
+
+	<Import Project="..\Ramto.Lib\Ramto.Lib.projitems" Label="Shared" />
+
+	<Import Project="..\Ramto.Infraestructura\Ramto.Infraestructura.projitems" Label="Shared" />
+
+	<Import Project="..\Core.MVVM\Core.MVVM.projitems" Label="Shared" />
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+    <PackageReference Include="ReportViewerCore.NETCore" Version="15.1.26" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+  </ItemGroup>
 
 </Project>
