--- a/Ramto/Ramto.csproj
+++ b/Ramto/Ramto.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Modal" Version="7.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.1" PrivateAssets="all" />
   </ItemGroup>
@@ -15,5 +16,11 @@
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
+
+  <Import Project="..\Core.MVVM\Core.MVVM.projitems" Label="Shared" />
+
+  <Import Project="..\Ramto.Lib\Ramto.Lib.projitems" Label="Shared" />
+
+  <Import Project="..\Ramto.Modelos\Ramto.Modelos.projitems" Label="Shared" />
 
 </Project>
